# faker-ecommerce

./: README.md  pyproject.toml
faker_ecommerce/: __init__.py  __main__.py  cli.py  config.py  writers.py
faker_ecommerce/generators/: __init__.py  base.py  customers.py  orders.py  products.py  reviews.py
