[project]
name = "faker-ecommerce"
version = "0.1.0"
description = "Generate realistic e-commerce test data for PostgreSQL or Parquet files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.8.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=15.0.0",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.66.0",
]

[project.scripts]
faker-ecommerce = "faker_ecommerce.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["faker_ecommerce"]
